--- a/stylesheet.css
+++ b/stylesheet.css
@@ -28,7 +28,7 @@ a {
 }
 
 .responsive {
-    max-width: 100%;
+    max-width: 85%;
     height: auto;
   }
 
@@ -80,6 +80,8 @@ a {
     td {
         width: 33%;
         vertical-align: top;
+        margin: auto;
+        padding: 0rem;
     }
     
     @keyframes defilement {
@@ -88,7 +90,7 @@ a {
     }
 
     .diapo {
-        width: 4320px;
+        width: 3200px;
         height: 0;
         padding-top: 75%;
         background-color: #ededed;
@@ -98,7 +100,7 @@ a {
     }
 
     .conteneur {
-        max-width: 1080px;
+        max-width: 800px;
         overflow: hidden;
         margin: 50px auto;
         box-shadow: 0px 0px 10px #777;
