--- a/stylesheet.css
+++ b/stylesheet.css
@@ -19,27 +19,7 @@ a {
 
 /* HOME */
 
-#photo_home {
-    max-width: 60%;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    padding-bottom: 1rem;
-}
 
-.responsive {
-    width: auto;
-    height: auto;
-    margin-right: 30rem;
-    margin-left: 30rem;
-  }
-
-.responsive_portfolio {
-    max-width: 85%;
-    height: auto;
-    margin-right: 30rem;
-    margin-left: 30rem;
-  }
 
 #pictos_RS {
     height: 1.6rem;
@@ -69,6 +49,61 @@ a {
     text-align: center;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     -webkit-font-smoothing: antialiased;
+}
+
+/* HOME */
+
+/* Desktop */
+@media screen and (min-width: 840px)
+{
+    #photo_home {
+        max-width: 60%;
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        padding-bottom: 1rem;
+    }
+    
+    .responsive {
+        width: auto;
+        height: auto;
+        margin-right: auto;
+        margin-left: auto;
+      }
+    
+    .responsive_portfolio {
+        max-width: 85%;
+        height: auto;
+        margin-right: 30rem;
+        margin-left: 30rem;
+      }
+}
+/* Mobile */
+@media screen and (max-width: 839px)
+{
+    
+#photo_home {
+    max-width: 85%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    padding-bottom: 1rem;
+}
+
+.responsive {
+    width: auto;
+    height: auto;
+    margin-right: auto;
+    margin-left: auto;
+  }
+
+  .responsive_portfolio {
+    max-width: 85%;
+    height: auto;
+    margin-right: auto;
+    margin-left: auto;
+  }
+
 }
 
 /* PORTFOLIO */
