--- a/stylesheet.css
+++ b/stylesheet.css
@@ -57,7 +57,7 @@ a {
 @media screen and (min-width: 840px)
 {
     #photo_home {
-        max-width: 60%;
+        max-width: 40%;
         display: block;
         margin-left: auto;
         margin-right: auto;
@@ -81,7 +81,7 @@ a {
 /* Mobile */
 @media screen and (max-width: 839px)
 {
-    
+
 #photo_home {
     max-width: 85%;
     display: block;
@@ -305,7 +305,7 @@ fieldset {
         display: block;
         width: fit-content;
         margin: auto;
-        padding: 1rem 0 0 0;
+        padding: 0;
         text-align: center;
     }
     ul li.horizontal {
